Hard Code Fix: long todo title overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: #ededed;
-  margin: 0 20%;
+  /*margin: 0 20%;*/
 }
 
 /*
